Fix collision for the transition button on the landing page. Update scrollbar thumb color and fix issue with the "about me" box

--- a/scrollbar.css
+++ b/scrollbar.css
@@ -5,7 +5,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #141413;
+    background-color: #565656;
     border: 2px solid rgba(0, 0, 0, 0);
     background-clip: padding-box;
     border-radius: 100px;
